# Topsis

./: .gitignore  LICENSE  README.md  data.csv  pyproject.toml
src/topsis_vaibhav_102316130/: topsis.py
